[gd_scene load_steps=8 format=3 uid="uid://drdjmvmh04u56"]

[ext_resource type="Script" path="res://code/ButtonSinglePath+pagecheck.gd" id="1_10fxe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ai603"]
albedo_color = Color(0.160784, 0.678431, 1, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_jh6jn"]
material = SubResource("StandardMaterial3D_ai603")

[sub_resource type="BoxShape3D" id="BoxShape3D_eoyae"]

[sub_resource type="SystemFont" id="SystemFont_glf04"]
font_weight = 425
subpixel_positioning = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qdg5f"]
albedo_color = Color(0, 0.58497, 0.887817, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_le0yu"]
material = SubResource("StandardMaterial3D_qdg5f")

[node name="SCbutton" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.005, 0, 0)
script = ExtResource("1_10fxe")

[node name="BBack" type="MeshInstance3D" parent="."]
transform = Transform3D(2.96365, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_jh6jn")
skeleton = NodePath("../../MeshInstance3D")

[node name="Area3D" type="Area3D" parent="BBack"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BBack/Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 5.18696e-13, 0, -5.18696e-13, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_eoyae")

[node name="ButtonText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0.2)
outline_modulate = Color(0, 0, 0, 0)
text = "Palaa karttaan"
font = SubResource("SystemFont_glf04")
font_size = 150
outline_size = 0

[node name="BBack2" type="MeshInstance3D" parent="."]
transform = Transform3D(3.0983, 0, 0, 0, -4.37114e-08, -1.0981, 0, 1, -4.79995e-08, 0.00137329, 2.38419e-07, -0.212839)
mesh = SubResource("PlaneMesh_le0yu")
skeleton = NodePath("../../MeshInstance3D")

[connection signal="input_event" from="BBack/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="BBack/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="BBack/Area3D" to="." method="_on_area_3d_mouse_exited"]
